--- a/CondoSimples/CondoSimples/Views/Tower/Index.cshtml
+++ b/CondoSimples/CondoSimples/Views/Tower/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CondoSimples.Models.CondoModel>
+﻿@model IEnumerable<CondoSimples.Models.TowerModel>
 
 @{
     ViewBag.Title = "Index";
@@ -12,10 +12,10 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.Condo.Name)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.ParkingSlots)
+            @Html.DisplayNameFor(model => model.Name)
         </th>
         <th></th>
     </tr>
@@ -23,10 +23,10 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Name)
+            @Html.DisplayFor(modelItem => item.Condo.Name)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.ParkingSlots)
+            @Html.DisplayFor(modelItem => item.Name)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
