--- a/CondoSimples/CondoSimples/Views/Shared/_Layout.cshtml
+++ b/CondoSimples/CondoSimples/Views/Shared/_Layout.cshtml
@@ -17,14 +17,39 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("CondoSimples", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
+                @if (User.IsInRole("Sindico"))
+                {
+                    <ul class="nav navbar-nav">
+                        <li>@Html.ActionLink("Meus dados", "Edit", "User")</li>                       
+                        <li>@Html.ActionLink("Condomínio", "Index", "Condo")</li>
+                        <li>@Html.ActionLink("Funcionários", "Index", "Employee")</li>
+                        <li>@Html.ActionLink("Usuários", "Index", "User")</li>
+                        <li>@Html.ActionLink("Mural", "Index", "Board")</li>
+                        <li>@Html.ActionLink("Trocar Senha", "ChangePassword", "Manage")</li>
+                        <li>@Html.ActionLink("About", "About", "Home")</li>
+                    </ul>
+                }
+                else if (User.IsInRole("Condomino"))
+                {
+                    <ul class="nav navbar-nav">
+                        <li>@Html.ActionLink("Meus dados", "Edit", "User")</li>
+                        <li>@Html.ActionLink("Mural", "Index", "Board")</li>
+                        <li>@Html.ActionLink("Trocar Senha", "ChangePassword", "Manage")</li>
+                        <li>@Html.ActionLink("About", "About", "Home")</li>
+
+                    </ul>
+                }
+                else if (User.IsInRole("Empregado"))
+                {
+                    <ul class="nav navbar-nav">
+                        <li>@Html.ActionLink("Trocar Senha", "ChangePassword", "Manage")</li>
+                        <li>@Html.ActionLink("About", "About", "Home")</li>
+                    </ul>
+                }
+
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
