--- a/CondoSimples/CondoSimples/Views/Tower/Edit.cshtml
+++ b/CondoSimples/CondoSimples/Views/Tower/Edit.cshtml
@@ -1,19 +1,21 @@
-﻿@model CondoSimples.Models.CondoModel
+﻿@model CondoSimples.Models.TowerModel
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edit";
 }
 
-<h2>Create</h2>
+<h2>Edit</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>CondoModel</h4>
+        <h4>TowerModel</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.ID)
+
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -23,16 +25,16 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ParkingSlots, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Condo_ID, "Condo_ID", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ParkingSlots, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ParkingSlots, "", new { @class = "text-danger" })
+                @Html.DropDownList("Condo_ID", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Condo_ID, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
