--- a/CondoSimples/CondoSimples/Views/Unit/Create.cshtml
+++ b/CondoSimples/CondoSimples/Views/Unit/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model CondoSimples.Models.CondoModel
+﻿@model CondoSimples.Models.UnitModel
 
 @{
     ViewBag.Title = "Create";
@@ -11,7 +11,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>CondoModel</h4>
+        <h4>UnitModel</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -23,10 +23,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ParkingSlots, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Tower_ID, "Tower_ID", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ParkingSlots, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ParkingSlots, "", new { @class = "text-danger" })
+                @Html.DropDownList("Tower_ID", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Tower_ID, "", new { @class = "text-danger" })
             </div>
         </div>
 
