--- a/CondoSimples/CondoSimples/Views/Unit/Delete.cshtml
+++ b/CondoSimples/CondoSimples/Views/Unit/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model CondoSimples.Models.CondoModel
+﻿@model CondoSimples.Models.UnitModel
 
 @{
     ViewBag.Title = "Delete";
@@ -8,23 +8,23 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>CondoModel</h4>
+    <h4>UnitModel</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.Tower.Name)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Tower.Name)
+        </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.Name)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ParkingSlots)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ParkingSlots)
         </dd>
 
     </dl>
