--- a/CondoSimples/CondoSimples/Views/Board/Details.cshtml
+++ b/CondoSimples/CondoSimples/Views/Board/Details.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Detalhes</h2>
 
 <div>
     <h4>BoardModel</h4>
@@ -34,9 +34,16 @@
             @Html.DisplayFor(model => model.DateExpires)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Published)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Published)
+        </dd>
+
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
