--- a/CondoSimples/CondoSimples/Views/Board/Delete.cshtml
+++ b/CondoSimples/CondoSimples/Views/Board/Delete.cshtml
@@ -35,6 +35,14 @@
             @Html.DisplayFor(model => model.DateExpires)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Published)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Published)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
