--- a/CondoSimples/CondoSimples/Content/bootstrap.css
+++ b/CondoSimples/CondoSimples/Content/bootstrap.css
@@ -6902,3 +6902,18 @@ button.close {
 .panel-info .panel-title {
   color: #fff;
 }
+.reset-col {
+    padding-left: 0;
+    padding-right: 0;
+}
+.board-post {
+    width: 100%;
+    border: 1px solid #033c73;
+    padding: 5px;
+}
+.board-date {
+    text-align: center;
+}
+.board-entry {
+    margin-bottom: 15px;
+}
