--- a/CondoSimples/CondoSimples/Views/Board/Index.cshtml
+++ b/CondoSimples/CondoSimples/Views/Board/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Mural de avisos</h2>
 
 <p>
     @if (ViewBag.ActivePost != "S")
@@ -14,7 +14,7 @@
     }
     else
     {
-        @Html.Raw("Você possui uma publicação não expirada! | ")
+        @Html.Raw("Você já possui uma publicação ativa | ")
     }
 
     @Html.ActionLink("Minhas publicações", "IndexByUser")
@@ -28,16 +28,22 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Post)
+            <p>
+                @Html.DisplayNameFor(model => model.Post)
+            </p>
         </th>
         <th>
+            <p>
             @Html.DisplayNameFor(model => model.DatePost)
+            </p>
         </th>
-        <th>
+        <!--<th>
             @Html.DisplayNameFor(model => model.DateExpires)
-        </th>
+        </th>-->
         <th>
-            @Html.DisplayNameFor(model => model.Published)
+            <p>
+                @Html.DisplayNameFor(model => model.Published)
+            </p>
         </th>
     </tr>
 
@@ -50,9 +56,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.DatePost)
             </td>
-            <td>
+            <!--<td>
                 @Html.DisplayFor(modelItem => item.DateExpires)
-            </td>
+            </td>-->
             <td>
                 @Html.DisplayFor(modelItem => item.Published)
             </td>
@@ -60,3 +66,13 @@
     }
 
 </table>
+
+@foreach (var item in Model)
+{
+    <div class="col-md-12 board-entry">
+        <p class="board-post">
+            @Html.DisplayFor(modelItem => item.Post)
+        </p>
+        <p class="board-date">@Html.DisplayFor(modelItem => item.DatePost)</p>
+    </div>
+}
