--- a/CondoSimples/CondoSimples/Views/Home/About.cshtml
+++ b/CondoSimples/CondoSimples/Views/Home/About.cshtml
@@ -4,4 +4,4 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Comece a usar essa bagaça, @Html.ActionLink("cadastre seu condomínio", "Create", "Condo")</p>
