--- a/CondoSimples/CondoSimples/Views/User/Create.cshtml
+++ b/CondoSimples/CondoSimples/Views/User/Create.cshtml
@@ -95,18 +95,14 @@
         <div class="form-group">
             <label for="pass">Senha</label>
             <div class="col-md-10">
-                <input type="password" name="pass" />
+                <input type="password" name="pass" class="control-label col-md-2"/>
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Finalizar" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Voltar", "Index")
-</div>
