--- a/CondoSimples/CondoSimples/Views/Shared/_Layout.cshtml
+++ b/CondoSimples/CondoSimples/Views/Shared/_Layout.cshtml
@@ -17,36 +17,36 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("CondoSimples", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("CondoSimples", "About", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 @if (User.IsInRole("Sindico"))
                 {
                     <ul class="nav navbar-nav">
+                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
                         <li>@Html.ActionLink("Meus dados", "Edit", "User")</li>                       
                         <li>@Html.ActionLink("Condomínio", "Index", "Condo")</li>
                         <li>@Html.ActionLink("Funcionários", "Index", "Employee")</li>
                         <li>@Html.ActionLink("Usuários", "Index", "User")</li>
                         <li>@Html.ActionLink("Mural", "Index", "Board")</li>
-                        <li>@Html.ActionLink("Trocar Senha", "ChangePassword", "Manage")</li>
-                        <li>@Html.ActionLink("About", "About", "Home")</li>
+                        <li>@Html.ActionLink("Trocar Senha", "ChangePassword", "Manage")</li>                        
                     </ul>
                 }
                 else if (User.IsInRole("Condomino"))
                 {
                     <ul class="nav navbar-nav">
+                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
                         <li>@Html.ActionLink("Meus dados", "Edit", "User")</li>
                         <li>@Html.ActionLink("Mural", "Index", "Board")</li>
                         <li>@Html.ActionLink("Trocar Senha", "ChangePassword", "Manage")</li>
-                        <li>@Html.ActionLink("About", "About", "Home")</li>
 
                     </ul>
                 }
                 else if (User.IsInRole("Empregado"))
                 {
                     <ul class="nav navbar-nav">
+                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
                         <li>@Html.ActionLink("Trocar Senha", "ChangePassword", "Manage")</li>
-                        <li>@Html.ActionLink("About", "About", "Home")</li>
                     </ul>
                 }
 
