--- a/CondoSimples/CondoSimples/Views/Home/Contact.cshtml
+++ b/CondoSimples/CondoSimples/Views/Home/Contact.cshtml
@@ -1,17 +1,16 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "Contato";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>@ViewBag.Title</h2>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+<address class="vcard">
+    <span class="adr">Av. Francisco Pignatari, 650</span><br />
+    <span class="region">Vila Gustavo Correia, Carapicuíba - SP</span><br />
+    <span class="postal-code">CEP: 06310-390</span><br /> 
+    <span class="tel"><abbr title="Telefone">Tel: (11)4184-8404</abbr></span>
+    
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Suporte:</strong>   <a href="mailto:condosimples@outlook.com.br">condosimples@outlook.com.br</a><br />
 </address>
