--- a/CondoSimples/CondoSimples/Views/Home/Index.cshtml
+++ b/CondoSimples/CondoSimples/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="jumbotron">
     <h1>CondoSimples - @ViewBag.Condo</h1>
-    <p class="lead">Sistema de condomínio e talz.</p>
+    <p class="lead">Solução em gestão da informação e espaços em condomínios prediais</p>
 </div>
