--- a/CondoSimples/CondoSimples/Views/Employee/Create.cshtml
+++ b/CondoSimples/CondoSimples/Views/Employee/Create.cshtml
@@ -1,17 +1,17 @@
 ﻿@model CondoSimples.Models.EmployeeModel
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Novo";
 }
 
-<h2>Create</h2>
+<h2>Novo</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>EmployeeModel</h4>
+        <h4>Funcionário</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -62,20 +62,20 @@
             </div>
         </div>
         <div class="form-group">
-            <label for="pass">Senha</label>
+            <label for="pass" class="control-label col-md-2">Senha</label>
             <div class="col-md-10">
-                <input type="password" name="pass" />
+                <input type="password" name="pass" class="form-control"/>
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Salvar" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Voltar", "Index")
 </div>
