--- a/CondoSimples/CondoSimples/Views/Shared/Lockout.cshtml
+++ b/CondoSimples/CondoSimples/Views/Shared/Lockout.cshtml
@@ -1,10 +1,10 @@
 ﻿@model System.Web.Mvc.HandleErrorInfo
 
 @{
-    ViewBag.Title = "Locked Out";
+    ViewBag.Title = "Bloqueada";
 }
 
 <hgroup>
-    <h1 class="text-danger">Locked out.</h1>
-    <h2 class="text-danger">This account has been locked out, please try again later.</h2>
+    <h1 class="text-danger">Bloqueada.</h1>
+    <h2 class="text-danger">Essa conta foi bloqueada. Por favor, tente novamente mais tarde.</h2>
 </hgroup>
