--- a/CondoSimples/CondoSimples/Views/Tower/Edit.cshtml
+++ b/CondoSimples/CondoSimples/Views/Tower/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model CondoSimples.Models.TowerModel
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Editar";
 }
 
-<h2>Edit</h2>
+<h2>Editar</h2>
 
 @using (Html.BeginForm())
 {
@@ -41,5 +41,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Voltar", "Index")
 </div>
