--- a/CondoSimples/CondoSimples/Views/Unit/Create.cshtml
+++ b/CondoSimples/CondoSimples/Views/Unit/Create.cshtml
@@ -1,17 +1,17 @@
 ﻿@model CondoSimples.Models.UnitModel
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Novo";
 }
 
-<h2>Create</h2>
+<h2>Novo</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>UnitModel</h4>
+        <h4>Unidades</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -32,12 +32,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Salvar" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Voltar", "Index")
 </div>
