--- a/CondoSimples/CondoSimples/Views/User/Create.cshtml
+++ b/CondoSimples/CondoSimples/Views/User/Create.cshtml
@@ -93,9 +93,9 @@
             </div>
         </div>
         <div class="form-group">
-            <label for="pass">Senha</label>
+            <label for="pass" class="control-label col-md-2">Senha</label>
             <div class="col-md-10">
-                <input type="password" name="pass" class="control-label col-md-2"/>
+                <input type="password" name="pass" class="form-control"/>
             </div>
         </div>
 
