--- a/CondoSimples/CondoSimples/Views/Board/Create.cshtml
+++ b/CondoSimples/CondoSimples/Views/Board/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model CondoSimples.Models.BoardModel
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Nova publicação";
 }
 
-<h2>Create</h2>
+<h2>Nova</h2>
 
 @using (Html.BeginForm()) 
 {
@@ -37,12 +37,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Salvar" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Voltar ao mural", "Index")
 </div>
