--- a/CondoSimples/CondoSimples/Views/Employee/Details.cshtml
+++ b/CondoSimples/CondoSimples/Views/Employee/Details.cshtml
@@ -1,13 +1,13 @@
 ﻿@model CondoSimples.Models.EmployeeModel
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Detalhes";
 }
 
-<h2>Details</h2>
+<h2>Detalhes</h2>
 
 <div>
-    <h4>EmployeeModel</h4>
+    <h4>Funcionário</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -61,6 +61,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Voltar a funcionários", "Index")
 </p>
