--- a/CondoSimples/CondoSimples/Views/Employee/Edit.cshtml
+++ b/CondoSimples/CondoSimples/Views/Employee/Edit.cshtml
@@ -1,17 +1,17 @@
 ﻿@model CondoSimples.Models.EmployeeModel
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Editar cadastro";
 }
 
-<h2>Edit</h2>
+<h2>Editar</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>EmployeeModel</h4>
+        <h4>Funcionário</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ID)
@@ -66,7 +66,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Salvar" class="btn btn-default" />
             </div>
         </div>
     </div>
