Tradução das views

--- a/CondoSimples/CondoSimples/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/CondoSimples/CondoSimples/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,13 +1,13 @@
 ﻿@{
-    ViewBag.Title = "Forgot Password Confirmation";
+    ViewBag.Title = "Esqueceu sua senha?";
 }
 
 <hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
+    <h1>@ViewBag.Title</h1>
 </hgroup>
 <div>
     <p>
-        Please check your email to reset your password.
+        Verifique seu email para redefinir sua senha.
     </p>
 </div>
 	
