--- a/CondoSimples/CondoSimples/Views/Borrow/Lended.cshtml
+++ b/CondoSimples/CondoSimples/Views/Borrow/Lended.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<CondoSimples.Models.BorrowModel>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Meus empréstimos";
 }
 
 <h2>Index</h2>
@@ -61,9 +61,9 @@
         </td>
         <td>
             @Html.ActionLink("Emprestar Item", "Lend", new { id = item.ID }) |
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
+            @Html.ActionLink("Editar", "Edit", new { id=item.ID }) |
+            @Html.ActionLink("Detalhes", "Details", new { id=item.ID }) |
+            @Html.ActionLink("Excluir", "Delete", new { id=item.ID })
         </td>
     </tr>
 }
