--- a/CondoSimples/CondoSimples/Views/Employee/Details.cshtml
+++ b/CondoSimples/CondoSimples/Views/Employee/Details.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Detalhes";
 }
 
-<h2>Detalhes</h2>
+<h2>Details</h2>
 
 <div>
     <h4>Funcionário</h4>
@@ -62,5 +62,5 @@
 </div>
 <p>
     @Html.ActionLink("Editar", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Voltar a funcionários", "Index")
+    @Html.ActionLink("Voltar", "Index")
 </p>
