--- a/CondoSimples/CondoSimples/Views/Shared/Error.cshtml
+++ b/CondoSimples/CondoSimples/Views/Shared/Error.cshtml
@@ -5,5 +5,5 @@
 }
 
 <h1 class="text-danger">Erro.</h1>
-<h2 class="text-danger">Ocorreu um erro ao procssar sua requisição.</h2>
+<h2 class="text-danger">Ocorreu um erro ao processar sua requisição.</h2>
 
