--- a/CondoSimples/CondoSimples/Views/Tower/Create.cshtml
+++ b/CondoSimples/CondoSimples/Views/Tower/Create.cshtml
@@ -11,7 +11,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>TowerModel</h4>
+        <h4>Torre</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
