--- a/CondoSimples/CondoSimples/Views/User/Edit.cshtml
+++ b/CondoSimples/CondoSimples/Views/User/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CondoSimples.Models.UserModel
 
 @{
-    ViewBag.Title = "Editar Dados";
+    ViewBag.Title = "Editar usuários";
 }
 
 <h2>Editar</h2>
@@ -105,5 +105,5 @@
 }
 
 <div>
-    @Html.ActionLink("Voltar", "Index")
+    @Html.ActionLink("Back para usuários", "Index")
 </div>
