--- a/CondoSimples/CondoSimples/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/CondoSimples/CondoSimples/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Reset password confirmation";
+    ViewBag.Title = "Redefinição de senha";
 }
 
 <hgroup class="title">
@@ -7,6 +7,6 @@
 </hgroup>
 <div>
     <p>
-        Your password has been reset. Please @Html.ActionLink("click here to log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+        Sua senha foi redefinida com sucesso. @Html.ActionLink("Clique aqui para entrar", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
     </p>
 </div>
