--- a/CondoSimples/CondoSimples/Views/Board/Create.cshtml
+++ b/CondoSimples/CondoSimples/Views/Board/Create.cshtml
@@ -4,14 +4,14 @@
     ViewBag.Title = "Nova publicação";
 }
 
-<h2>Nova</h2>
+<h2>Nova publicação</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>BoardModel</h4>
+        <h4>Publicação</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -44,5 +44,5 @@
 }
 
 <div>
-    @Html.ActionLink("Voltar ao mural", "Index")
+    @Html.ActionLink("Voltar", "Index")
 </div>
