--- a/CondoSimples/CondoSimples/Views/Board/Details.cshtml
+++ b/CondoSimples/CondoSimples/Views/Board/Details.cshtml
@@ -1,13 +1,13 @@
 ﻿@model CondoSimples.Models.BoardModel
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Detalhes";
 }
 
 <h2>Detalhes</h2>
 
 <div>
-    <h4>BoardModel</h4>
+    <h4>Postagem</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -45,5 +45,5 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Voltar", "Index")
 </p>
