--- a/CondoSimples/CondoSimples/Views/Board/Index.cshtml
+++ b/CondoSimples/CondoSimples/Views/Board/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<CondoSimples.Models.BoardModel>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Postagens";
 }
 
-<h2>Index</h2>
+<h2>Postagens</h2>
 
 <p>
     @if (ViewBag.ActivePost != "S")
