--- a/CondoSimples/CondoSimples/Views/Board/IndexAdmin.cshtml
+++ b/CondoSimples/CondoSimples/Views/Board/IndexAdmin.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Publicações pendentes";
 }
 
-<h2>Index</h2>
+<h2>Publicações pendentes</h2>
 
 <p>
     @Html.ActionLink("Voltar", "Index")
@@ -42,8 +42,8 @@
         </td>
         <td>
             @Html.ActionLink("Publicar", "Publish", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Detalhes", "Details", new { id=item.Id }) |
+            @Html.ActionLink("Excluir", "Delete", new { id=item.Id })
         </td>
     </tr>
 }
