--- a/CondoSimples/CondoSimples/Views/Board/IndexByUser.cshtml
+++ b/CondoSimples/CondoSimples/Views/Board/IndexByUser.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Minhas publicações";
 }
 
-<h2>Index</h2>
+<h2>Minhas publicações</h2>
 
 <p>
     @Html.ActionLink("Voltar", "Index")
@@ -41,12 +41,12 @@
             @Html.DisplayFor(modelItem => item.Published)
         </td>
         <td>
-            @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+            @Html.ActionLink("Detalhes", "Details", new { id = item.Id }) |
+            @Html.ActionLink("Excluir", "Delete", new { id = item.Id })
             @if (item == Model.Last())
             {
                 @Html.Raw(" | ")
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id })               
+                @Html.ActionLink("Editar", "Edit", new { id = item.Id })               
             }
         </td>
 
