--- a/CondoSimples/CondoSimples/Views/Borrow/Delete.cshtml
+++ b/CondoSimples/CondoSimples/Views/Borrow/Delete.cshtml
@@ -1,14 +1,14 @@
 ﻿@model CondoSimples.Models.BorrowModel
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Excluir";
 }
 
-<h2>Delete</h2>
+<h2>Excluir</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem certeza que quer excluir esse espréstimo?</h3>
 <div>
-    <h4>BorrowModel</h4>
+    <h4>Empréstimo</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -73,8 +73,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Excluir" class="btn btn-default" /> |
+            @Html.ActionLink("Voltar", "Index")
         </div>
     }
 </div>
