--- a/CondoSimples/CondoSimples/Views/Borrow/Index.cshtml
+++ b/CondoSimples/CondoSimples/Views/Borrow/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<CondoSimples.Models.BorrowModel>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Empréstimos";
 }
 
 <h2>Index</h2>
