--- a/CondoSimples/CondoSimples/Views/Condo/Delete.cshtml
+++ b/CondoSimples/CondoSimples/Views/Condo/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Excluir</h2>
 
-<h3>Tem certeza que quer escluir esse condomínio?</h3>
+<h3>Tem certeza que quer excluir esse condomínio?</h3>
 <div>
     <h4>Condomínio</h4>
     <hr />
