--- a/CondoSimples/CondoSimples/Views/Condo/Details.cshtml
+++ b/CondoSimples/CondoSimples/Views/Condo/Details.cshtml
@@ -1,13 +1,13 @@
 ﻿@model CondoSimples.Models.CondoModel
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Detalhes";
 }
 
-<h2>Details</h2>
+<h2>Detalhes</h2>
 
 <div>
-    <h4>CondoModel</h4>
+    <h4>Condomínio</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -29,6 +29,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Voltar", "Index")
 </p>
