--- a/CondoSimples/CondoSimples/Views/Employee/Create.cshtml
+++ b/CondoSimples/CondoSimples/Views/Employee/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model CondoSimples.Models.EmployeeModel
 
 @{
-    ViewBag.Title = "Cadastro de funcionário";
+    ViewBag.Title = "Novo";
 }
 
-<h2>Novo funcionário</h2>
+<h2>Novo</h2>
 
 @using (Html.BeginForm()) 
 {
