--- a/CondoSimples/CondoSimples/Views/Employee/Edit.cshtml
+++ b/CondoSimples/CondoSimples/Views/Employee/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model CondoSimples.Models.EmployeeModel
 
 @{
-    ViewBag.Title = "Editar cadastro";
+    ViewBag.Title = "Editar";
 }
 
-<h2>Editar</h2>
+<h2>Edit</h2>
 
 @using (Html.BeginForm())
 {
@@ -73,5 +73,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Voltar", "Index")
 </div>
