--- a/CondoSimples/CondoSimples/Views/Unit/Delete.cshtml
+++ b/CondoSimples/CondoSimples/Views/Unit/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Excluir</h2>
 
-<h3>Tem certeza que quer escluir essa unidade?</h3>
+<h3>Tem certeza que quer excluir essa unidade?</h3>
 <div>
     <h4>Unidade</h4>
     <hr />
