--- a/CondoSimples/CondoSimples/Views/Unit/Index.cshtml
+++ b/CondoSimples/CondoSimples/Views/Unit/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<CondoSimples.Models.UnitModel>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Unidades";
 }
 
-<h2>Index</h2>
+<h2>Unidades</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Novo", "Create")
 </p>
 <table class="table">
     <tr>
@@ -29,9 +29,9 @@
             @Html.DisplayFor(modelItem => item.Name)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
+            @Html.ActionLink("Editar", "Edit", new { id=item.ID }) |
+            @Html.ActionLink("Detalhes", "Details", new { id=item.ID }) |
+            @Html.ActionLink("Excluir", "Delete", new { id=item.ID })
         </td>
     </tr>
 }
