--- a/CondoSimples/CondoSimples/Views/User/Details.cshtml
+++ b/CondoSimples/CondoSimples/Views/User/Details.cshtml
@@ -1,13 +1,13 @@
 ﻿@model CondoSimples.Models.UserModel
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Detalhes do usuário";
 }
 
-<h2>Details</h2>
+<h2>Detalhes</h2>
 
 <div>
-    <h4>UserModel</h4>
+    <h4>Usuário</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -94,5 +94,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Voltar para usuários", "Index")
 </p>
