--- a/CondoSimples/CondoSimples/Content/Site.css
+++ b/CondoSimples/CondoSimples/Content/Site.css
@@ -40,3 +40,10 @@ textarea {
     margin-bottom: 15px;
     display: inline-block;
 }
+.functionalities .funcs {
+    margin-bottom: 15px;
+    line-height: 1.9;
+}
+p.last-ones {
+    margin: 50px 0;
+}
