--- a/CondoSimples/CondoSimples/Views/Board/Index.cshtml
+++ b/CondoSimples/CondoSimples/Views/Board/Index.cshtml
@@ -37,6 +37,9 @@
             @Html.DisplayNameFor(model => model.DateExpires)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.User)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Published)
         </th>
     </tr>
@@ -52,6 +55,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.DateExpires)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.User.Email)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Published)
