--- a/CondoSimples/CondoSimples/Views/Board/IndexByUser.cshtml
+++ b/CondoSimples/CondoSimples/Views/Board/IndexByUser.cshtml
@@ -21,6 +21,9 @@
             @Html.DisplayNameFor(model => model.DateExpires)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.User)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Published)
         </th>
         <th></th>
@@ -36,6 +39,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.DateExpires)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.User.Email)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Published)
