--- a/CondoSimples/CondoSimples/Views/Employee/Create.cshtml
+++ b/CondoSimples/CondoSimples/Views/Employee/Create.cshtml
@@ -49,7 +49,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DutyDays, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DutyDays, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.DutyDays, new { htmlAttributes = new { @class = "form-control", @placeholder = "Seg-Ter-Sex-Dom" } })
                 @Html.ValidationMessageFor(model => model.DutyDays, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -57,7 +57,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.WorkShift, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.WorkShift, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.WorkShift, new { htmlAttributes = new { @class = "form-control", @placeholder = "9h-21h" } })
                 @Html.ValidationMessageFor(model => model.WorkShift, "", new { @class = "text-danger" })
             </div>
         </div>
