--- a/CondoSimples/CondoSimples/Views/Board/Delete.cshtml
+++ b/CondoSimples/CondoSimples/Views/Board/Delete.cshtml
@@ -7,7 +7,7 @@
 <h2>Excluir</h2>
 
 <h3>Tem certeza que quer excluir essa postagem?</h3>
-<p>Ao excluir uma publicação, seu autor será notificado por e-mail.</p>
+<p>Ao excluir uma publicação, o usuário que a escreveu receberá um e-mail.</p>
 <div>
     <h4>Postagem</h4>
     <hr />
