--- a/CondoSimples/CondoSimples/Views/Shared/_Layout.cshtml
+++ b/CondoSimples/CondoSimples/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
                         <li>@Html.ActionLink("Condomínio", "Index", "Condo")</li>
                         <li>@Html.ActionLink("Funcionários", "Index", "Employee")</li>
                         <li>@Html.ActionLink("Usuários", "Index", "User")</li>
+                        <li>@Html.ActionLink("Prestadores", "Index", "OutSourcer")</li>
                         <li>@Html.ActionLink("Mural", "Index", "Board")</li>
                         <li>@Html.ActionLink("Empréstimos", "Index", "Borrow")</li>
                         <li>@Html.ActionLink("Trocar Senha", "ChangePassword", "Manage")</li>                        
@@ -49,6 +50,7 @@
                 {
                     <ul class="nav navbar-nav">
                         <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                        <li>@Html.ActionLink("Prestadores", "Index", "OutSourcer")</li>
                         <li>@Html.ActionLink("Trocar Senha", "ChangePassword", "Manage")</li>
                     </ul>
                 }
