--- a/CondoSimples/CondoSimples/Views/Shared/_Layout.cshtml
+++ b/CondoSimples/CondoSimples/Views/Shared/_Layout.cshtml
@@ -9,63 +9,68 @@
 
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-inverse">
         <div class="container">
-            <div class="navbar-header">
+            <div class="navbar-header full-width">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+                <img src="~/Content/Images/logo.png" alt="CondoSimples" class="logo-image"/>
                 @Html.ActionLink("CondoSimples", "About", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.Partial("_LoginPartial")
             </div>
             <div class="navbar-collapse collapse">
                 @if (User.IsInRole("Sindico"))
                 {
                     <ul class="nav navbar-nav">
-                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                        @*<li>@Html.ActionLink("Meus dados", "Edit", "User")</li>*@                    
-                        <li>@Html.ActionLink("Condomínio", "Index", "Condo")</li>
-                        <li>@Html.ActionLink("Funcionários", "Index", "Employee")</li>
-                        <li>@Html.ActionLink("Usuários", "Index", "User")</li>
-                        <li>@Html.ActionLink("Prestadores", "Index", "OutSourcer")</li>
-                        <li>@Html.ActionLink("Mural", "Index", "Board")</li>
-                        <li>@Html.ActionLink("Empréstimos", "Index", "Borrow")</li>
-                        <li>@Html.ActionLink("Trocar Senha", "ChangePassword", "Manage")</li>                        
+                        <li role="presentation">@Html.ActionLink("Home", "Index", "Home")</li>
+                        @*<li role="presentation">@Html.ActionLink("Meus dados", "Edit", "User")</li>*@
+                        <li role="presentation">@Html.ActionLink("Condomínio", "Index", "Condo")</li>
+                        <li role="presentation">@Html.ActionLink("Funcionários", "Index", "Employee")</li>
+                        <li role="presentation">@Html.ActionLink("Usuários", "Index", "User")</li>
+                        <li role="presentation">@Html.ActionLink("Prestadores", "Index", "OutSourcer")</li>
+                        <li role="presentation">@Html.ActionLink("Mural", "Index", "Board")</li>
+                        <li role="presentation">@Html.ActionLink("Empréstimos", "Index", "Borrow")</li>
+                        <li role="presentation">@Html.ActionLink("Trocar Senha", "ChangePassword", "Manage")</li>
+                        <li role="presentation" class="visible-xs"><a href="javascript:document.getElementById('logoutForm').submit()">Sair</a></li>
                     </ul>
                 }
                 else if (User.IsInRole("Condomino"))
                 {
                     <ul class="nav navbar-nav">
-                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                        <li>@Html.ActionLink("Funcionários", "Index", "Employee")</li>
-                        @*<li>@Html.ActionLink("Meus dados", "Edit", "User")</li>*@
-                        <li>@Html.ActionLink("Mural", "Index", "Board")</li>
-                        <li>@Html.ActionLink("Empréstimos", "Index", "Borrow")</li>
-                        <li>@Html.ActionLink("Trocar Senha", "ChangePassword", "Manage")</li>
-
+                        <li role="presentation">@Html.ActionLink("Home", "Index", "Home")</li>
+                        <li role="presentation">@Html.ActionLink("Funcionários", "Index", "Employee")</li>
+                        @*<li role="presentation">@Html.ActionLink("Meus dados", "Edit", "User")</li>*@
+                        <li role="presentation">@Html.ActionLink("Mural", "Index", "Board")</li>
+                        <li role="presentation">@Html.ActionLink("Empréstimos", "Index", "Borrow")</li>
+                        <li role="presentation">@Html.ActionLink("Trocar Senha", "ChangePassword", "Manage")</li>
+                        <li role="presentation" class="visible-xs"><a href="javascript:document.getElementById('logoutForm').submit()">Sair</a></li>
                     </ul>
                 }
                 else if (User.IsInRole("Empregado"))
                 {
                     <ul class="nav navbar-nav">
-                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                        <li>@Html.ActionLink("Prestadores", "Index", "OutSourcer")</li>
-                        <li>@Html.ActionLink("Trocar Senha", "ChangePassword", "Manage")</li>
+                        <li role="presentation">@Html.ActionLink("Home", "Index", "Home")</li>
+                        <li role="presentation">@Html.ActionLink("Prestadores", "Index", "OutSourcer")</li>
+                        <li role="presentation">@Html.ActionLink("Trocar Senha", "ChangePassword", "Manage")</li>
+                        <li role="presentation" class="visible-xs"><a href="javascript:document.getElementById('logoutForm').submit()">Sair</a></li>
                     </ul>
                 }
 
-                @Html.Partial("_LoginPartial")
             </div>
         </div>
     </div>
     <div class="container body-content">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - CondoSimples</p>
-        </footer>
+               
     </div>
+    <footer class="standard-footer">
+        <div class="container">
+            <p>&copy; @DateTime.Now.Year - CondoSimples</p>
+        </div>
+    </footer>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
